--- a/ShamdiDatePickerSample/ShamdiDatePickerSample/MainPage.xaml
+++ b/ShamdiDatePickerSample/ShamdiDatePickerSample/MainPage.xaml
@@ -72,7 +72,8 @@
                               Margin="5"
                               Grid.Row="2"
                               Grid.Column="1"
-                              CalendarBackgroundColor="AliceBlue"/>
+                              CalendarBackgroundColor="AliceBlue"
+                              RenderMode="Default"/>
 
         <Button Text="OpenCalendar"
                 Clicked="Button_Clicked"
