--- a/ShamdiDatePickerSample/ShamdiDatePickerSample/MainPage.xaml
+++ b/ShamdiDatePickerSample/ShamdiDatePickerSample/MainPage.xaml
@@ -5,21 +5,53 @@
              x:Class="ShamdiDatePickerSample.MainPage">
 
     <ContentPage.Resources>
-        <!--<Style TargetType="sdp:ShamsiDatePicker">
+        <Style TargetType="sdp:ShamsiDatePicker">
+
+            <!-- کمترین سال شمسی قابل انتخاب از تقویم -->
+            <Setter Property="MinimumShamsiYear" Value="1320"/>
+
+            <!-- بیشترین سال شمسی قابل انتخاب از تقویم -->
+            <Setter Property="MaximumShamsiYear" Value="1420"/>
+            
+            <!-- رنگ سربرگ تقویم -->
             <Setter Property="HeaderBackgroundColor" Value="SteelBlue"/>
+            
+            <!-- رنگ متن عنوان سربرگ تقویم -->
             <Setter Property="HeaderTitleTextColor" Value="Gold"/>
+            
+            <!-- رنگ متن زیر عنوان سربرگ تقویم -->
             <Setter Property="HeaderSubTitleTextColor" Value="LightYellow"/>
+            
+            <!-- رنگ صفحه تقویم تقویم -->
             <Setter Property="CalendarBackgroundColor" Value="WhiteSmoke"/>
+            
+            <!-- رنگ متن عنوان صفحه تقویم -->
             <Setter Property="CalendarTitleColor" Value="DarkGoldenrod"/>
+            
+            <!-- رنگ متن زیر عنوان صفحه تقویم -->
             <Setter Property="CalendarSubTitleColor" Value="DarkBlue"/>
+            
+            <!-- رنگ متن اعداد صفحه تقویم -->
             <Setter Property="CalendarTextColor" Value="BlueViolet"/>
+            
+            <!-- رنگ متن روز انتخاب شده صفحه تقویم -->
             <Setter Property="CalendarSelectedTextColor" Value="Cyan"/>
+            
+            <!-- رنگ هایلایت روز انتخاب شده صفحه تقویم -->
             <Setter Property="CalendarHighlightColor" Value="SteelBlue"/>
+            
+            <!-- رنگ متن کلید انتخاب تقویم -->
             <Setter Property="CalendarOKButtonTextColor" Value="ForestGreen"/>
+            
+            <!-- رنگ پس زمینه کلید انتخاب تقویم -->
             <Setter Property="CalendarOKButtonBackgroundColor" Value="LightBlue"/>
+            
+            <!-- رنگ متن کلید انصراف تقویم -->
             <Setter Property="CalendarCancelButtonTextColor" Value="Red"/>
+            
+            <!-- رنگ پس زمینه کلید انصراف تقویم -->
             <Setter Property="CalendarCancelButtonBackgroundColor" Value="LightBlue"/>
-        </Style>-->
+        </Style>
     </ContentPage.Resources>
 
     <Grid>
@@ -67,8 +99,6 @@
 
         <sdp:ShamsiDatePicker x:Name="ShamsiDatePicker"
             Date="{Binding TargetDate, Mode=TwoWay}"
-                              MinimumShamsiYear="1320"
-                              MaximumShamsiYear="1420"
                               Margin="5"
                               Grid.Row="2"
                               Grid.Column="1"
